--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ file(GLOB src
     "${CMAKE_CURRENT_SOURCE_DIR}/portable/GCC/nrf52/*.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/portable/CMSIS/nrf52/*.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/source/portable/MemMang/heap_4.c"
-    "${sdk_location}/components/drivers_nrf/timer/nrf_drv_timer.c"
-    "${sdk_location}/components/libraries/timer/app_timer.c"
+    #"${sdk_location}/components/drivers_nrf/timer/nrf_drv_timer.c"
+    "${sdk_location}/components/drivers_nrf/clock/*.c"
+    #"${sdk_location}/components/libraries/timer/app_timer.c"
     )
 
 
